# zoom-demo

./: README.md  log.conf  pyproject.toml
src/zoom_demo/: __init__.py  conf.py  http.py  main.py  zoom.py
src/zoom_demo/router/: zoom_auth.py
tests/: base64_test.py
