[project]
name = "zoom-demo"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "minta.chiu", email = "minta.chu@labbase.co.jp" }
]
dependencies = [
    "fastapi[all]>=0.115.6",
    "pydantic-settings>=2.6.1",
    "aiohttp>=3.11.10",
    "concurrent-log-handler>=0.9.25",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "isort>=5.13.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zoom_demo"]

[tool.rye.scripts]
dev = { cmd = ["uvicorn", "zoom_demo.main:api", "--reload"] }
test = { cmd = ["pytest", "--cov", "-s"] }
lint = { cmd = ["python", "-m", "black", "./src"] }
